--- a/OMPWebApp/Components/Pages/MainPanel.razor
+++ b/OMPWebApp/Components/Pages/MainPanel.razor
@@ -31,6 +31,7 @@ else
                         <ChildContent>
                             <RadzenProfileMenuItem Text="Profile" Icon="account_circle"></RadzenProfileMenuItem>
                             <RadzenProfileMenuItem Text="Logout" Icon="line_weight"></RadzenProfileMenuItem>
+                            <RadzenProfileMenuItem Text="Logout" Icon="line_weight"></RadzenProfileMenuItem>
                         </ChildContent>
                     </RadzenProfileMenu>
                 </div>
