--- a/OMPWebApp/Components/Pages/ManageGroupDialog.razor
+++ b/OMPWebApp/Components/Pages/ManageGroupDialog.razor
@@ -18,6 +18,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <span>@user.Name</span>
                         <RadzenButton Text="Remove" Click="() => RemoveUserFromGroup(user)" ButtonStyle="ButtonStyle.Danger" />
+                        <RadzenButton Text="Make Admin" Click="() => ChangeOwnerOfGroup(user)" ButtonStyle="ButtonStyle.Light" />
                     </div>
                 </Template>
             </RadzenDataList>
@@ -73,6 +74,12 @@
     private async Task RemoveUserFromGroup(UserDTO user)
     {
         await ApiServiceGU.DeleteResource($"/api/GroupUser/DeleteFromGroup/{group.Id}/{user.Id}");
+        await LoadData();
+    }
+
+    private async Task ChangeOwnerOfGroup(UserDTO user)
+    {
+        await ApiServiceGU.GetResource($"/api/GroupUser/AddAdmin/{group.Id}/{user.Id}");
         await LoadData();
     }
 
